--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title><%= htmlWebpackPlugin.options.title %></title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicons/favicon-16x16.png">
-    <link rel="manifest" href="<%= BASE_URL %>favicons/site.webmanifest">
-    <link rel="mask-icon" href="<%= BASE_URL %>favicons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="<%= BASE_URL %>favicons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/static/favicons/site.webmanifest">
+    <link rel="mask-icon" href="/static/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/static/favicons/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="Tassa">
     <meta name="application-name" content="Tassa">
     <meta name="msapplication-TileColor" content="#f4fdf7">
-    <meta name="msapplication-config" content="<%= BASE_URL %>favicons/browserconfig.xml">
+    <meta name="msapplication-config" content="/static/favicons/browserconfig.xml">
     <meta name="theme-color" content="#f4fdf7">
   </head>
   <body>
