--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicons/favicon-16x16.png">
-    <link rel="manifest" href="/static/favicons/site.webmanifest">
-    <link rel="mask-icon" href="/static/favicons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="/static/favicons/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="Tassa">
-    <meta name="application-name" content="Tassa">
-    <meta name="msapplication-TileColor" content="#f4fdf7">
-    <meta name="msapplication-config" content="/static/favicons/browserconfig.xml">
-    <meta name="theme-color" content="#f4fdf7">
   </head>
   <body>
     <noscript>
